@@ -11,7 +11,8 @@ install:
  - pip3 install pytest pytest-pylint pytest-doctestplus pytest-mypy
 
 script:
- - pytest -v --mypy --pylint --doctest-plus --doctest-rst
+  - PYTHONPATH=`pwd` pytest -v --mypy --pylint
+  # - PYTHONPATH=`pwd` pytest -v --mypy --pylint --doctest-plus --doctest-rst
 
 before_deploy:
  - python3 setup.py sdist
