@@ -65,3 +65,4 @@ SFN_TO_LFN_EXTENSIONS = {"GCO": "gcode", "G": "g"}
 
 NO_IP = "NO_IP"
 RESET_PIN = 22  # RPi gpio pin for resetting printer
+SUPPORTED_FIRMWARE = "3.9.3"
