@@ -35,6 +35,7 @@
     * Ensure M20 won't be sent during print. Ever
     * Start faster when already printing from SD
     * Don't store password in plaintext but use digest
+    * Stop Wizard on printer errors.
 
 0.2.0 (2020-12-14)
 
